--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,27 +1,54 @@
- <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+<head>
+    <title>DrOntoEval</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <body>
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+    <script type="text/javascript" src="./js/libs/jquery.js"></script>
+    <script type="text/javascript" src="./js/libs/materialize.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="./css/onto.css">
+    <link rel="stylesheet" type="text/css" href="./css/materialize.css">
+    <link href="./css/material-icon.css" rel="stylesheet">
 
 
-      <div class="container">
-            <div class="col s12">Evaluation Ontologies</div>
-            <div class="col s4">Creating Gold Standard</div>
-            <div class="col s4">Evaluation terms</div>
-            <div class="col s4">Evaluation relations</div>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="index.html" class="brand-logo">Evaluation Ontologies</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
+                <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
+                <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
+            </ul>
+            <ul id="slide-out" class="side-nav">
+                <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
+                <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
+                <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
+            </ul>
+            <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+        </div>
 
-      </div>
+    </nav>
 
-    </body>
-  </html>
+</head>
+
+<body>
+<div id="contenido" class="container section">
+    <h1> DrOntoEval </h1>
+    <p> This application permits create a gold standard and evaluation relations and terms of an ontology </p>
+</div>
+
+</body>
+<script>
+        $(".button-collapse").sideNav({closeOnClick: true});
+        function changePage(a) {
+               $("#contenido").load(a);
+        }
+</script>
+</html>
