--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,39 +16,50 @@ and open the template in the editor.
     <link rel="stylesheet" type="text/css" href="./css/onto.css">
     <link rel="stylesheet" type="text/css" href="./css/materialize.css">
     <link href="./css/material-icon.css" rel="stylesheet">
-
-
-    <nav>
-        <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo">Evaluation Ontologies</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
-                <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
-                <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
-            </ul>
-            <ul id="slide-out" class="side-nav">
-                <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
-                <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
-                <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
-            </ul>
-            <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-        </div>
-
-    </nav>
-
 </head>
 
 <body>
-<div id="contenido" class="container section">
-    <h1> DrOntoEval </h1>
-    <p> This application permits create a gold standard and evaluation relations and terms of an ontology </p>
-</div>
+<nav>
+    <div class="nav-wrapper indigo">
+        <a href="index.html" class="brand-logo">DrOntoEval</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
+            <li><a onclick="changePage('terms.html');">Evaluation Terms</a></li>
+            <li><a onclick="changePage('relations.html');">Evaluation Relations</a></li>
+        </ul>
+        <ul id="slide-out" class="side-nav">
+            <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
+            <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
+            <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
+        </ul>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+    </div>
+</nav>
 
+
+<div id="contenido" class="container section">
+    <div class="row">
+        <div class="col s7 offset-s2"><h1>Welcome to DrOntoEval</h1></div>
+        <div class="col s11 offset-s1 ">
+            <div class="center-align">
+            <h4> This application has been developed for evaluating ontologies.</h4>
+            </div>
+            <div class="card-panel blue lighten-1">
+                <h5>The available tasks are:</h5>
+                <ul class="collection">
+                        <li class="collection-item">Create a gold standard of taxonomic relations</li>
+                        <li class="collection-item">Do a human expert evaluation of terms</li>
+                        <li class="collection-item">Do a quantitative evaluation of taxonomic relations</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script>
-        $(".button-collapse").sideNav({closeOnClick: true});
-        function changePage(a) {
-               $("#contenido").load(a);
-        }
+    $(".button-collapse").sideNav({closeOnClick: true});
+    function changePage(a) {
+           $("#contenido").load(a);
+    }
 </script>
 </html>
