Icons solved and relations prototype

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@ and open the template in the editor.
 
     <link rel="stylesheet" type="text/css" href="./css/onto.css">
     <link rel="stylesheet" type="text/css" href="./css/materialize.css">
-    <link href="./css/material-icon.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +32,7 @@ and open the template in the editor.
             <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
             <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
         </ul>
-        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">reorder</i></a>
     </div>
 </nav>
 
