--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+    Created on : 09-may-2016
+    Author     : dchaves
 -->
 <html>
 <head>
@@ -19,7 +18,7 @@ and open the template in the editor.
 </head>
 
 <body>
-<nav>
+<nav>   
     <div class="nav-wrapper indigo">
         <a href="index.html" class="brand-logo">DrOntoEval</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -39,18 +38,49 @@ and open the template in the editor.
 
 <div id="contenido" class="container section">
     <div class="row">
-        <div class="col s7 offset-s2"><h1>Welcome to DrOntoEval</h1></div>
-        <div class="col s11 offset-s1 ">
-            <div class="center-align">
-            <h4> This application has been developed for evaluating ontologies.</h4>
+        <div class="col s12 center-align">
+            <h1>Welcome to DrOntoEval</h1>
+        </div>
+        <div class="col s12 center-align" style="margin-top: -20px">
+            <h5>The application to evaluating Ontologies</h5>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 50px;">
+        <div class="col s4 center-align">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Create a Gold Standard</span>
+                    <div class="cardsText">I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</div>
+                </div>
+                <div class="card-action">
+                    <a onclick="changePage('goldstandard.html')">Create a GS</a>
+                </div>
             </div>
-            <div class="card-panel blue lighten-1">
-                <h5>The available tasks are:</h5>
-                <ul class="collection">
-                        <li class="collection-item">Create a gold standard of taxonomic relations</li>
-                        <li class="collection-item">Do a human expert evaluation of terms</li>
-                        <li class="collection-item">Do a quantitative evaluation of taxonomic relations</li>
-                </ul>
+        </div>
+
+        <div class="col s4 center-align">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Evaluate terms</span>
+                    <div class="cardsText">I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</div>
+                </div>
+                <div class="card-action">
+                    <a onclick="changePage('terms.html')">Eval terms</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4 center-align">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Evaluate taxonomic relations</span>
+                    <div class="cardsText">I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</div>
+                </div>
+                <div class="card-action">
+                    <a onclick="changePage('relations.html')">Eval relations</a>
+                </div>
             </div>
         </div>
     </div>
