--- a/src/main/webapp/terms.html
+++ b/src/main/webapp/terms.html
@@ -1,9 +1,11 @@
+<!--
+    Created on : 09-may-2016
+    Author     : dchaves
+-->
 
-<script type="text/javascript" src="./js/libs/materialize.js"></script>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div id="contenido" class="container section">
     <div class="row">
-        <div class="col s9 offset-s1"><h1>Evaluation of relations</h1></div>
+        <div class="col s9 offset-s1 center-align"><h1>Evaluation of relations</h1></div>
         <div class="col s11 offset-s1">
             <div class="card-panel blue lighten-1">
                 <h5>The available ontologies for the evaluation are:</h5>
