Dynamic links + prototypes pages

--- a/src/main/webapp/goldstandard.html
+++ b/src/main/webapp/goldstandard.html
@@ -2,19 +2,20 @@
     Created on : 09-may-2016
     Author     : dchaves
 -->
+
 <div id="contenido" class="container section">
-    <div class="row">
+
         <div class="col s12 center-align"><h1>Create a gold standard</h1></div>
-        <div class="col s12">
+        <div class="col s12 ">
             <div class="card-panel blue lighten-1">
-                <h5>The available collections of terms are:</h5>
+                <h5>The available ontologies for the evaluation are:</h5>
                 <ul class="collection">
-                    <li class="collection-item"><div>Ontology<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                    <li class="collection-item"><div>Ontology<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                    <li class="collection-item"><div>Ontology<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                    <li class="collection-item"><div>Ontology<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
                 </ul>
             </div>
         </div>
-    </div>
+
 </div>
