--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,11 +9,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script type="text/javascript" src="./js/libs/jquery.js"></script>
-    <script type="text/javascript" src="./js/libs/materialize.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+
 
     <link rel="stylesheet" type="text/css" href="./css/onto.css">
-    <link rel="stylesheet" type="text/css" href="./css/materialize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -23,8 +24,8 @@
         <a href="index.html" class="brand-logo">DrOntoEval</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
-            <li><a onclick="changePage('terms.html');">Evaluation Terms</a></li>
-            <li><a onclick="changePage('relations.html');">Evaluation Relations</a></li>
+            <li><a onclick="changePage('terms.html');">Evaluate Terms</a></li>
+            <li><a onclick="changePage('relations.html');">Evaluate Relations</a></li>
         </ul>
         <ul id="slide-out" class="side-nav">
             <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
@@ -42,7 +43,7 @@
             <h1>Welcome to DrOntoEval</h1>
         </div>
         <div class="col s12 center-align" style="margin-top: -20px">
-            <h5>The application to evaluating Ontologies</h5>
+            <h5>The application for evaluating Ontologies</h5>
         </div>
     </div>
     <div class="row" style="margin-top: 50px;">
@@ -54,7 +55,7 @@
                         I am convenient because I require little markup to use effectively.</div>
                 </div>
                 <div class="card-action">
-                    <a onclick="changePage('goldstandard.html')">Create a GS</a>
+                    <a onclick="changePage('goldstandard.html')">Begin to create a GS</a>
                 </div>
             </div>
         </div>
