--- a/src/main/webapp/terms.html
+++ b/src/main/webapp/terms.html
@@ -4,18 +4,18 @@
 -->
 
 <div id="contenido" class="container section">
-    <div class="row">
-        <div class="col s9 offset-s1 center-align"><h1>Evaluation of relations</h1></div>
-        <div class="col s11 offset-s1">
+
+        <div class="col s12 center-align"><h1>Evaluate terms</h1></div>
+        <div class="col s12 ">
             <div class="card-panel blue lighten-1">
-                <h5>The available ontologies for the evaluation are:</h5>
+                <h5>The available collections of terms are:</h5>
                 <ul class="collection">
-                    <li class="collection-item"><div>Ontology+terms<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                    <li class="collection-item"><div>Ontology+terms<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                    <li class="collection-item"><div>Ontology+terms<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
-                    <li class="collection-item"><div>Ontology+terms<a href="#!" class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology+terms<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology+terms<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology+terms<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
+                    <li class="collection-item"><div>Ontology+terms<a class="secondary-content"><i class="material-icons">send</i></a></div></li>
                 </ul>
             </div>
         </div>
-    </div>
+
 </div>
