--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <script src="js/libs/materialize.min.js"></script>
 
 
     <link rel="stylesheet" type="text/css" href="./css/onto.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -23,14 +23,14 @@
     <div class="nav-wrapper indigo">
         <a href="index.html" class="brand-logo">DrOntoEval</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
-            <li><a onclick="changePage('terms.html');">Evaluate Terms</a></li>
-            <li><a onclick="changePage('relations.html');">Evaluate Relations</a></li>
+            <li><a onclick="changePage('goldstandard.jsp');">Gold Standard</a></li>
+            <li><a onclick="changePage('terms.jsp');">Evaluate Terms</a></li>
+            <li><a onclick="changePage('relations.jsp');">Evaluate Relations</a></li>
         </ul>
         <ul id="slide-out" class="side-nav">
-            <li><a onclick="changePage('goldstandard.html');">Gold Standard</a></li>
-            <li><a onclick="changePage('terms.html');">Eval Terms</a></li>
-            <li><a onclick="changePage('relations.html');">Eval Relations</a></li>
+            <li><a onclick="changePage('goldstandard.jsp');">Gold Standard</a></li>
+            <li><a onclick="changePage('terms.jsp');">Eval Terms</a></li>
+            <li><a onclick="changePage('relations.jsp');">Eval Relations</a></li>
         </ul>
         <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">reorder</i></a>
     </div>
@@ -55,7 +55,7 @@
                         I am convenient because I require little markup to use effectively.</div>
                 </div>
                 <div class="card-action">
-                    <a onclick="changePage('goldstandard.html')">Begin to create a GS</a>
+                    <a onclick="changePage('goldstandard.jsp')">Begin to create a GS</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
                         I am convenient because I require little markup to use effectively.</div>
                 </div>
                 <div class="card-action">
-                    <a onclick="changePage('terms.html')">Eval terms</a>
+                    <a onclick="changePage('terms.jsp')">Eval terms</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
                         I am convenient because I require little markup to use effectively.</div>
                 </div>
                 <div class="card-action">
-                    <a onclick="changePage('relations.html')">Eval relations</a>
+                    <a onclick="changePage('relations.jsp')">Eval relations</a>
                 </div>
             </div>
         </div>
